cmake_minimum_required(VERSION 3.17)
project(AlgorithmLeetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(AlgorithmLeetcode main.cpp)
add_executable(5-longest-palindromic-substring leetcode/editor/cn/5-longest-palindromic-substring.cpp)
add_executable(8-string-to-integer-atoi leetcode/editor/cn/8-string-to-integer-atoi.cpp)
add_executable(459-repeated-substring-pattern leetcode/editor/cn/459-repeated-substring-pattern.cpp)
add_executable(3-longest-substring-without-repeating-characters leetcode/editor/cn/3-longest-substring-without-repeating-characters.cpp)
add_executable(491-increasing-subsequences leetcode/editor/cn/491-increasing-subsequences.cpp)
add_executable(17-letter-combinations-of-a-phone-number leetcode/editor/cn/17-letter-combinations-of-a-phone-number.cpp)
add_executable(46-permutations leetcode/editor/cn/46-permutations.cpp)
add_executable(14-longest-common-prefix leetcode/editor/cn/14-longest-common-prefix.cpp)
add_executable(47-permutations-ii leetcode/editor/cn/47-permutations-ii.cpp)
add_executable(332-reconstruct-itinerary leetcode/editor/cn/332-reconstruct-itinerary.cpp)
add_executable(6-zigzag-conversion leetcode/editor/cn/6-zigzag-conversion.cpp)
add_executable(58-length-of-last-word leetcode/editor/cn/58-length-of-last-word.cpp)
add_executable(67-add-binary leetcode/editor/cn/67-add-binary.cpp)
add_executable(66-plus-one leetcode/editor/cn/66-plus-one.cpp)
add_executable(657-robot-return-to-origin leetcode/editor/cn/657-robot-return-to-origin.cpp)
add_executable(36-valid-sudoku leetcode/editor/cn/36-valid-sudoku.cpp)
add_executable(43-multiply-strings leetcode/editor/cn/43-multiply-strings.cpp)
add_executable(224-basic-calculator leetcode/editor/cn/224-basic-calculator.cpp)
add_executable(70-climbing-stairs leetcode/editor/cn/70-climbing-stairs.cpp)
add_executable(120-triangle leetcode/editor/cn/120-triangle.cpp)
add_executable(64-minimum-path-sum leetcode/editor/cn/64-minimum-path-sum.cpp)
add_executable(343-integer-break leetcode/editor/cn/343-integer-break.cpp)
add_executable(279-perfect-squares leetcode/editor/cn/279-perfect-squares.cpp)
add_executable(91-decode-ways leetcode/editor/cn/91-decode-ways.cpp)
add_executable(221-maximal-square leetcode/editor/cn/221-maximal-square.cpp)
add_executable(413-arithmetic-slices leetcode/editor/cn/413-arithmetic-slices.cpp)
add_executable(375-guess-number-higher-or-lower-ii leetcode/editor/cn/375-guess-number-higher-or-lower-ii.cpp)
add_executable(62-unique-paths leetcode/editor/cn/62-unique-paths.cpp)
add_executable(63-unique-paths-ii leetcode/editor/cn/63-unique-paths-ii.cpp)
add_executable(198-house-robber leetcode/editor/cn/198-house-robber.cpp)
add_executable(213-house-robber-ii leetcode/editor/cn/213-house-robber-ii.cpp)
add_executable(130-surrounded-regions leetcode/editor/cn/130-surrounded-regions.cpp)
add_executable(200-number-of-islands leetcode/editor/cn/200-number-of-islands.cpp)
add_executable(337-house-robber-iii leetcode/editor/cn/337-house-robber-iii.cpp)
add_executable(146-lru-cache leetcode/editor/cn/146-lru-cache.cpp)
add_executable(263-ugly-number leetcode/editor/cn/263-ugly-number.cpp)
add_executable(504-base-7 leetcode/editor/cn/504-base-7.cpp)
add_executable(54-spiral-matrix leetcode/editor/cn/54-spiral-matrix.cpp)
add_executable(59-spiral-matrix-ii leetcode/editor/cn/59-spiral-matrix-ii.cpp)
add_executable(1297-maximum-number-of-occurrences-of-a-substring leetcode/editor/cn/1297-maximum-number-of-occurrences-of-a-substring.cpp)
add_executable(299-bulls-and-cows leetcode/editor/cn/299-bulls-and-cows.cpp)
add_executable(12-integer-to-roman leetcode/editor/cn/12-integer-to-roman.cpp)
add_executable(68-text-justification leetcode/editor/cn/68-text-justification.cpp)
add_executable(1041-robot-bounded-in-circle leetcode/editor/cn/1041-robot-bounded-in-circle.cpp)
add_executable(838-push-dominoes leetcode/editor/cn/838-push-dominoes.cpp)
add_executable(166-fraction-to-recurring-decimal leetcode/editor/cn/166-fraction-to-recurring-decimal.cpp)
add_executable(4-median-of-two-sorted-arrays leetcode/editor/cn/4-median-of-two-sorted-arrays.cpp)
add_executable(121-best-time-to-buy-and-sell-stock leetcode/editor/cn/121-best-time-to-buy-and-sell-stock.cpp)
add_executable(746-min-cost-climbing-stairs leetcode/editor/cn/746-min-cost-climbing-stairs.cpp)
add_executable(53-maximum-subarray leetcode/editor/cn/53-maximum-subarray.cpp)
add_executable(72-edit-distance leetcode/editor/cn/72-edit-distance.cpp)
add_executable(300-longest-increasing-subsequence leetcode/editor/cn/300-longest-increasing-subsequence.cpp)
add_executable(787-cheapest-flights-within-k-stops leetcode/editor/cn/787-cheapest-flights-within-k-stops.cpp)
add_executable(31-next-permutation leetcode/editor/cn/31-next-permutation.cpp)
add_executable(55-jump-game leetcode/editor/cn/55-jump-game.cpp)
add_executable(45-jump-game-ii leetcode/editor/cn/45-jump-game-ii.cpp)
add_executable(135-candy leetcode/editor/cn/135-candy.cpp)
add_executable(455-assign-cookies leetcode/editor/cn/455-assign-cookies.cpp)
add_executable(122-best-time-to-buy-and-sell-stock-ii leetcode/editor/cn/122-best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(134-gas-station leetcode/editor/cn/134-gas-station.cpp)
add_executable(860-lemonade-change leetcode/editor/cn/860-lemonade-change.cpp)
add_executable(139-word-break leetcode/editor/cn/139-word-break.cpp)
add_executable(7-reverse-integer leetcode/editor/cn/7-reverse-integer.cpp)
add_executable(11-container-with-most-water leetcode/editor/cn/11-container-with-most-water.cpp)
add_executable(22-generate-parentheses leetcode/editor/cn/22-generate-parentheses.cpp)
add_executable(39-combination-sum leetcode/editor/cn/39-combination-sum.cpp)
add_executable(338-counting-bits leetcode/editor/cn/338-counting-bits.cpp)
add_executable(49-group-anagrams leetcode/editor/cn/49-group-anagrams.cpp)
add_executable(57-insert-interval leetcode/editor/cn/57-insert-interval.cpp)
add_executable(56-merge-intervals leetcode/editor/cn/56-merge-intervals.cpp)
add_executable(71-simplify-path leetcode/editor/cn/71-simplify-path.cpp)
add_executable(73-set-matrix-zeroes leetcode/editor/cn/73-set-matrix-zeroes.cpp)
add_executable(227-basic-calculator-ii leetcode/editor/cn/227-basic-calculator-ii.cpp)
add_executable(136-single-number leetcode/editor/cn/136-single-number.cpp)
add_executable(706-design-hashmap leetcode/editor/cn/706-design-hashmap.cpp)
add_executable(74-search-a-2d-matrix leetcode/editor/cn/74-search-a-2d-matrix.cpp)
add_executable(75-sort-colors leetcode/editor/cn/75-sort-colors.cpp)
add_executable(78-subsets leetcode/editor/cn/78-subsets.cpp)
add_executable(202-happy-number leetcode/editor/cn/202-happy-number.cpp)